testdata/class/error-3.lox
class Bar {
    baz() {
        this = 10; // error: line 3 at '=': invalid target for assignment: want variable or get expression, got this expression
    }
}


